Archive2/c7/0662b534105d88/output
main.cpp: In function 'int main()':
main.cpp:188:20: error: invalid use of 'using shape_ = using type = std::tuple_element<0ul, std::tuple<diagonal_> >::type'
   std::cout << te1.shape_ << std::endl;
                    ^
